tests/core/negative/control/non_predicate_condition.vais
fn main() -> i64 {
    I "bad" { return 1 } else { return 0 }
}
